# Ornament

./: Cargo.toml
customize/: .angular-cli.json  README.md  package-lock.json  package.json
customize/e2e/: app.e2e-spec.ts
customize/src/: index.html  styles.css
customize/src/app/: app.component.html  app.component.ts  app.module.ts  drag.directive.ts  textparam.ts
customize/src/app/fontselect/: fontselect.component.html  fontselect.component.spec.ts  fontselect.component.ts
customize/src/app/nebraska/: nebraska.component.css  nebraska.component.html  nebraska.component.spec.ts  nebraska.component.ts
customize/src/app/svgtext/: svgtext.component.html  svgtext.component.spec.ts  svgtext.component.ts
customize/src/app/textparams/: textparams.component.html  textparams.component.spec.ts  textparams.component.ts
output/: Aos72pZ36r.json
src/: main.rs
